# AI-Driven-Workflow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-stack.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  deployment.md  phase-0.md
docs/decisions/: 0001-deploy-target-and-infra.md  0002-runtime-stack.md
docs/operations/: vps-manager-rules.md
scripts/: deploy.sh  dev-up.sh
src/ai_workflow/: __init__.py  config.py  main.py
src/ai_workflow/routers/: health.py
tests/: test_health.py
